...
            "state" : "translated",
            "value" : "Poistuminen luovuttaa paikkasi. Takaisin pääsy vaatii uuden koodin toiselta vanhemmalta."
          }
        }
      }
    },
    "Manage" : {
      "localizations" : {
        "fi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hallinta"
          }
...
            "state" : "translated",
            "value" : "Sinä"
          }
        }
      }
    },
    "You can tick these off on the day." : {
      "localizations" : {
        "fi" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Voit merkitä nämä tehdyiksi kyseisenä päivänä."
          }
...
